Bug 405741 - Converting an animated fill layer to a pixel layer removes the frames.
Summary: Converting an animated fill layer to a pixel layer removes the frames.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-22 00:14 UTC by wolthera
Modified: 2021-01-28 02:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2019-03-22 00:14:00 UTC
SUMMARY
Animated fill layers when converted to pixel layers lose their frames.

STEPS TO REPRODUCE
1. Take an animated fill layer.
2. Convert to a pixel layer
3. Observe how all frames are removed.
Comment 1 Halla Rempt 2019-04-04 09:23:21 UTC
I didn't even know we could animate fill layers...
Comment 2 Eoin O'Neill 2021-01-28 02:41:18 UTC
Git commit f2fee32ebb88595ad7ee4621810b4b095515a85c by Eoin O'Neill.
Committed on 28/01/2021 at 02:40.
Pushed by eoinoneill into branch 'master'.

Improved convertToPaintLayer to use KisProcessingApplicator

Solves some conversion hedgecases where frame data would be lost or other layer data
would be lost in the conversion. Should also make it up to date with other layer
operations that require projection updates.

M  +207  -13   libs/image/kis_layer_utils.cpp
M  +4    -2    libs/image/kis_layer_utils.h
M  +1    -69   libs/ui/kis_layer_manager.cc

https://invent.kde.org/graphics/krita/commit/f2fee32ebb88595ad7ee4621810b4b095515a85c