Improved convertToPaintLayer to use KisProcessingApplicator

Solves some conversion hedgecases where frame data would be lost or other layer data
would be lost in the conversion. Should also make it up to date with other layer
operations that require projection updates.

BUG:405741